# Project1

./: ADD.h  Automaton.h  CMakeLists.txt  COMMAS.h  COMMENT.h  ColonAutomaton.h  ColonDashAutomaton.h  Database.h  Datalog.cpp  Datalog.h  FACTS.h  Header.h  ID.h  Interpreter.h  LEFT_PAREN.h  Lexer.cpp  Lexer.h  MULTIPLY.h  P2Rules.h  P4Relations.h  PERIOD.h  Parameter.h  Predicate.h  QUERIES.h  Q_MARK.h  RIGHT_PAREN.h  RULES.h  SCHEMES.h  STRING.h  Token.h  Tuple.h  main.cpp  makefile_1  makefile_2  makefile_3
